@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-08-08T16:07:00Z",
-  "count_outdated" : 599,
-  "uniques_outdated" : 116,
+  "timestamp" : "2022-08-12T16:07:43Z",
+  "count_outdated" : 602,
+  "uniques_outdated" : 117,
   "count" : 606,
   "uniques" : 119,
   "views" : [
-    {
-      "timestamp": "2022-07-29T00:00:00Z",
-      "count": 3,
-      "count_minmax": [ 3, 3 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-07-31T00:00:00Z",
       "count": 2,
