@@ -1,12 +1,7 @@
 {
-  "count": 7,
-  "uniques": 3,
+  "count": 4,
+  "uniques": 2,
   "views": [
-    {
-      "timestamp": "2022-07-29T00:00:00Z",
-      "count": 3,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-07-31T00:00:00Z",
       "count": 2,
